[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "tokio-based uTP implementation"
documentation = "https://docs.rs/tokio-utp"
license = "MIT OR BSD-3-Clause"
name = "tokio-utp"
repository = "https://github.com/maidsafe/tokio_utp"
version = "0.3.0"
edition = "2018"

[dependencies]
arraydeque = "0.4.5"
byteorder = "1.3.4"
bytes = "0.5.6"
futures = "0.3.5"
log = "0.4.11"
mio = "0.6.20"
net-literals = "0.1.2"
# TODO(povilas): need to update libc in netsim so that we could use latest
# version V
nix = "0.18.0"
rand = "0.7.3"
slab = "0.4.2"
smallvec = "1.4.1"
tokio = { version = "0.2.22", features = ["full"] }
unwrap = "1.2.1"
void = "1"

[dev-dependencies]
env_logger = "0.7.1"
hamcrest = "~0.1.5"
rand_xorshift = "0.2.0"

# [features]
# default = ["netsim"]
# [target."cfg(target_os = \"linux\")".dependencies.netsim]
# optional = true
# version = "~0.2.3"
